cmd/login-gateway/k8s/01-login-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-gateway
  namespace: kube-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: login-gateway
  template:
    metadata:
      labels:
        app: login-gateway
    spec:
      containers:
      - name: login-gateway
        image: uhub.service.ucloud.cn/entropypool/login-gateway:latest
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: login-gateway
  namespace: kube-system
spec:
  ports:
  - name: http
    port: 50240
    targetPort: 50240
  - name: grpc
    port: 50241
    targetPort: 50241
  - name: prometheus
    port: 50242
    targetPort: 50242
  selector:
    app: login-gateway
